server.log

> atlas-vision@0.1.0 start
> react-scripts start

(node:22829) [DEP_WEBPACK_DEV_SERVER_ON_AFTER_SETUP_MIDDLEWARE] DeprecationWarning: 'onAfterSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
(Use `node --trace-deprecation ...` to show where the warning was created)
(node:22829) [DEP_WEBPACK_DEV_SERVER_ON_BEFORE_SETUP_MIDDLEWARE] DeprecationWarning: 'onBeforeSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
Starting the development server...

Compiled successfully!

You can now view atlas-vision in the browser.

  Local:            http://localhost:3000/atlas-vision
  On Your Network:  http://192.168.68.56:3000/atlas-vision

Note that the development build is not optimized.
To create a production build, use npm run build.

webpack compiled successfully
Compiling...
Failed to compile.

[eslint] 
src/components/SensorComparisonTool.js
Syntax error: Expected corresponding JSX closing tag for <div>. (460:8) (460:8)
ERROR in ./src/components/SensorComparisonTool.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /Users/danielpark/Projects/vibing/atlas-vision/src/components/SensorComparisonTool.js: Expected corresponding JSX closing tag for <div>. (460:8)

  458 |              </div>
  459 |           </div>
> 460 |         </main>
      |         ^
  461 |       </div>
  462 |     </div>
  463 |   );
    at constructor (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:367:19)
    at FlowParserMixin.raise (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:6624:19)
    at FlowParserMixin.jsxParseElementAt (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:4756:16)
    at FlowParserMixin.jsxParseElementAt (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:4727:32)
    at FlowParserMixin.jsxParseElementAt (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:4727:32)
    at FlowParserMixin.jsxParseElementAt (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:4727:32)
    at FlowParserMixin.jsxParseElement (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:4778:17)
    at FlowParserMixin.parseExprAtom (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:4788:19)
    at FlowParserMixin.parseExprSubscripts (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:11145:23)
    at FlowParserMixin.parseUpdate (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:11130:21)
    at FlowParserMixin.parseMaybeUnary (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:11110:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10963:61)
    at FlowParserMixin.parseExprOps (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10968:23)
    at FlowParserMixin.parseMaybeConditional (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10945:23)
    at FlowParserMixin.parseMaybeAssign (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10895:21)
    at /Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:3527:39
    at FlowParserMixin.tryParse (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:6932:20)
    at FlowParserMixin.parseMaybeAssign (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:3527:18)
    at /Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10864:39
    at FlowParserMixin.allowInAnd (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:12500:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10864:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:12567:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:11747:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:3620:18)
    at FlowParserMixin.parseExprAtom (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:11395:23)
    at FlowParserMixin.parseExprAtom (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:4793:20)
    at FlowParserMixin.parseExprSubscripts (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:11145:23)
    at FlowParserMixin.parseUpdate (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:11130:21)
    at FlowParserMixin.parseMaybeUnary (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:11110:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10963:61)
    at FlowParserMixin.parseExprOps (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10968:23)
    at FlowParserMixin.parseMaybeConditional (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10945:23)
    at FlowParserMixin.parseMaybeAssign (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10895:21)
    at FlowParserMixin.parseMaybeAssign (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:3578:18)
    at FlowParserMixin.parseExpressionBase (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10848:23)
    at /Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10844:39
    at FlowParserMixin.allowInAnd (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:12495:16)
    at FlowParserMixin.parseExpression (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:10844:17)
    at FlowParserMixin.parseReturnStatement (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:13218:28)
    at FlowParserMixin.parseStatementContent (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:12874:21)
    at FlowParserMixin.parseStatementLike (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:12843:17)
    at FlowParserMixin.parseStatementLike (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:2945:24)
    at FlowParserMixin.parseStatementListItem (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:12823:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:13392:61)
    at FlowParserMixin.parseBlockBody (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:13385:10)
    at FlowParserMixin.parseBlock (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:13373:10)
    at FlowParserMixin.parseFunctionBody (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:12174:24)
    at /Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:2919:63
    at FlowParserMixin.forwardNoArrowParamsConversionAt (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:3095:16)
    at FlowParserMixin.parseFunctionBody (/Users/danielpark/Projects/vibing/atlas-vision/node_modules/@babel/parser/lib/index.js:2919:12)

ERROR in [eslint] 
src/components/SensorComparisonTool.js
  Line 460:8:  Parsing error: Expected corresponding JSX closing tag for <div>. (460:8)

webpack compiled with 2 errors
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled with warnings.

[eslint] 
src/components/SensorComparisonTool.js
  Line 3:10:  'currentVersion' is defined but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/components/SensorComparisonTool.js
  Line 3:10:  'currentVersion' is defined but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
